Bunch of revisions and adding stuff, dunno, was doing xmax

--- a/dp2/bibliography.bib
+++ b/dp2/bibliography.bib
@@ -384,3 +384,42 @@
       year = {2012},
       url = {https://eprint.iacr.org/2012/090}
 }
+
+@misc{MemoryAccessInSnarks,
+      author = {Alex Ozdemir and Evan Laufer and Dan Boneh},
+      title = {Volatile and Persistent Memory for {zkSNARKs} via Algebraic Interactive Proofs},
+      howpublished = {Cryptology {ePrint} Archive, Paper 2024/979},
+      year = {2024},
+      url = {https://eprint.iacr.org/2024/979}
+}
+
+@article{Lyubashevsky2013,
+  title = {On Ideal Lattices and Learning with Errors over Rings},
+  volume = {60},
+  ISSN = {1557-735X},
+  url = {http://dx.doi.org/10.1145/2535925},
+  DOI = {10.1145/2535925},
+  number = {6},
+  journal = {Journal of the ACM},
+  publisher = {Association for Computing Machinery (ACM)},
+  author = {Lyubashevsky,  Vadim and Peikert,  Chris and Regev,  Oded},
+  year = {2013},
+  month = nov,
+  pages = {1–35}
+}
+
+@misc{PeikertRingLWE,
+      author = {Sedat Akleylek and Nina Bindel and Johannes Buchmann and Juliane Krämer and Giorgia Azzurra Marson},
+      title = {An Efficient Lattice-Based Signature Scheme with Provably Secure Instantiation},
+      howpublished = {Cryptology {ePrint} Archive, Paper 2016/030},
+      year = {2016},
+      url = {https://eprint.iacr.org/2016/030}
+}
+
+@misc{Peikert2008,
+      author = {Chris Peikert},
+      title = {Public-Key Cryptosystems from the Worst-Case Shortest Vector Problem},
+      howpublished = {Cryptology {ePrint} Archive, Paper 2008/481},
+      year = {2008},
+      url = {https://eprint.iacr.org/2008/481}
+}
