--- a/dp2/content/introduction.tex
+++ b/dp2/content/introduction.tex
@@ -45,6 +45,8 @@ comparable to classical ZKP methods while ensuring quantum resistance.
 
 \section*{Document Structure}
 
+% TODO after all is done update this
+
 This work includes the initial analytical work in Analysis
 \ref{chap:analysis}. This chapter begins with an overview of Ethereum
 \ref{sec:ethereum}, covering its consensus and execution mechanisms.
