--- a/dp2/content/problem_statement.tex
+++ b/dp2/content/problem_statement.tex
@@ -30,7 +30,7 @@ schemes, such as LatticeFold \cite{LatticeFold}.
 
 Despite these theoretical advantages, a significant gap exists in the
 literature and open-source ecosystem, \textbf{there is currently no practical
-implementation of a general-purpose RISC-V ZkVM built entirely upon lattice-based primitives.}
+solution of a general-purpose RISC-V ZkVM built entirely upon lattice-based primitives.}
 
 The problem addressed by this thesis is the lack of a concrete instantiation
 of a RISC-V ZkVM that leverages lattice-based folding schemes. It remains
